--- a/docker/nginx/templates/default.conf.template
+++ b/docker/nginx/templates/default.conf.template
@@ -5,7 +5,7 @@ server {
         include fastcgi_params_php;
     }
 
-    root /var/www/src/public;
+    root /var/www/public;
     index index.php index.html index.htm;
     client_max_body_size 64M;
 
