Create a specific user for the container

--- a/docker/phpfpm/Dockerfile
+++ b/docker/phpfpm/Dockerfile
@@ -1,5 +1,9 @@
 FROM php:8.3-fpm as base
 
+ARG USER=www
+ARG UID=1000
+ARG GID=1000
+
 WORKDIR /var/www
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -16,11 +20,12 @@ RUN set -eux; \
 # Get latest Composer
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 
+RUN groupadd --force -g ${GID} ${USER}
+RUN useradd -ms /bin/bash --no-user-group -g ${GID} -u ${UID} ${USER}
+
 COPY ./docker/phpfpm/docker-entrypoint.sh /docker-entrypoint
 RUN chmod +x /docker-entrypoint
 #
 ENTRYPOINT ["/docker-entrypoint"]
 
-# https://getcomposer.org/doc/03-cli.md#composer-allow-superuser
-ENV COMPOSER_ALLOW_SUPERUSER=1
-ENV PATH="${PATH}:/root/.composer/vendor/bin"
+USER ${USER}
