--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,10 @@ services:
     build:
       context: ./
       dockerfile: ./docker/phpfpm/Dockerfile
+      args:
+        USER: ${USER:-www}
+        UID: ${UID:-1000}
+        GID: ${GID:-1000}
     volumes:
       - ./src/:/var/www/
     networks:
